<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_grey" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/blue"
            android:orientation="horizontal" >

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity=""
                android:layout_weight=".5"
                android:orientation="vertical" >

                <ImageView
                    android:id="@+id/delete_image_view"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="3dp"
                    android:layout_marginTop="3dp"
                    android:clickable="true"
                    android:src="@drawable/delete_alarm" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                android:orientation="vertical" >

                <ImageView
                    android:id="@+id/add_alarm_image_view"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:layout_marginBottom="3dp"
                    android:layout_marginTop="7dp"
                    android:clickable="true"
                    android:src="@drawable/add_alarm" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/touch_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:text="@string/application_at"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/job_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:text="job name"
                android:textSize="20sp" />

            <RelativeLayout
                android:id="@+id/layoutProgressBar"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_below="@+id/textViewMessage"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:layout_marginTop="0dp" >

                <ProgressBar
                    android:id="@+id/progressBar"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:layout_centerHorizontal="true"
                    android:background="@drawable/circle_shape"
                    android:indeterminate="false"
                    android:progressDrawable="@drawable/circle_progress_bar" />

                <TextView
                    android:id="@+id/left_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="00:00:00"
                    android:textColor="@color/blue"
                    android:textSize="20sp" />
            </RelativeLayout>

            <LinearLayout
                android:id="@+id/job_no"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center_vertical"
                android:orientation="horizontal" >

          
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <ImageView android:id="@+id/edit_alarm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="3dp"
                    android:src="@drawable/edit_alarm"
                    android:text="@string/only_alarm"
                   	android:contentDescription="TODO"/>
              

                <CheckBox
                    android:id="@+id/notification_checkbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="5dp"
                    android:checked="true"
                    android:text="@string/disable_notification" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</ScrollView>